--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "keypair": "^1.0.1"
   },
   "devDependencies": {
-    "jest": "^23.5.0"
+    "jest": "^23.5.0",
+    "nodemon": "^1.18.3"
   }
 }
